--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     }
   </style>
 
-  <title>Aurora Navarro Villacampa</title>
+  <title>Jade Roberts</title>
   <link rel="icon" type="image/x-icon" href="images/favicon_c_s.png">
 
 </head>
@@ -24,11 +24,11 @@
   <div class=wrapper>
 
     <div class="header">
-      <button id="name">Aurora Navarro Villacampa</button>
+      <button id="name">Jade Roberts</button>
 
       <button id="cv"><a href="images/CV_Aurora_Navarro.pdf" target="_blank">CV</a></button>
       <button id="about"><a href="about.html">About</a></button>
-      <button id="projects"><span>Projects</span></button>
+      <button id="projects"><a href="projects.html">Projects</a></button>
       <!-- CV + about together on the same page.. maybe called Bio? -->
     </div>
 
@@ -43,8 +43,8 @@
         <input id="collapsible21" class="toggle" type="checkbox">
         <label for="collapsible21" class="lbl-toggle" id="tog21" tabindex="0">
           <div class="gradient">
-            <h1>Climate Oases</h1>
-            <h2> UX, UI, Interaction / 2023 (WIP)</h2>
+            <h1>MusicSense</h1>
+            <h2> UX, UI, Interaction / 2022</h2>
           </div>
         </label>
         <div class="collapsible-content">
@@ -52,11 +52,9 @@
 
             <div class="description">
               <p>
-                Climate change will continue to worsen extreme weather conditions in the future, 
-                we are already feeling these effects now. Because of this, 
-                our experience of urban spaces will change radically. 
+                A musical glove with three modalities to produce music on one octave with realtime feedback.
                 <br><br>
-                How can cities adapt to these new extreme climate conditions? 
+                 
                 <br>
                 <!-- The identity will be versatile, giving the possibility to create assets for digital and print, and leave space for the association to continue to grow with it. -->
               </p>
@@ -66,8 +64,7 @@
                 These are largely public spaces that serve the additional purpose of providing a temporary refuge 
                 from hostile climate conditions. -->
 
-                In this project, I made an improved proposal for Barcelona's "climate shelter" network.
-                Working with their open data, I created more accessible UI and a more instinctive symbol for urban signage.
+                In this project, I created the user interface for user feedback using P5.js.
                 <br><br>
                 🔗 <a href="https://www.figma.com/proto/YLlnORelA00AazuNOwtLYv/Climate-Shelters----Information-Design?page-id=0%3A1&type=design&node-id=265-1822&viewport=-2987%2C995%2C0.28&scaling=scale-down&starting-point-node-id=265%3A1822&show-proto-sidebar=1" target="_blank">Interactive Prototype</a>
                 <br>
