--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     }
 </style>
 
-<title>Jade Roberts/title>
+<title>Jade Roberts</title>
 <link rel="icon" type="image/x-icon" href="images/favicon_c_s.png">
 
 </head>
