--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
 
 <head>
 <meta charset="utf-8">
+<link rel="stylesheet" type="font/css" href="http://fonts.googleapis.com/css?family=Gabarito"> 
 <link rel="stylesheet" href="css/style.css" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="script.js"></script>
 
 <style>
+  h1 { 
+    font-family: 'Gabarito', serif; font-size: 48px; 
+  }
   html {
       scroll-behavior: smooth;
     }
