--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" type="css/font/Gabarito" href="http://fonts.googleapis.com/css?family=Gabarito"> 
+<link rel="stylesheet" type="css/font/Gabarito-SemiBold.ttf" href="http://fonts.googleapis.com/css?family=Gabarito"> 
 <link rel="stylesheet" href="css/style.css" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="script.js"></script>
