--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     }
   </style>
 
-  <title>Aurora Navarro Villacampa</title>
+  <title>About Jade</title>
   <link rel="icon" type="image/x-icon" href="images/favicon_c_s.png">
 </head>
 
@@ -28,7 +28,7 @@
   <div class=wrapper>
 
     <div class="header">
-      <button id="name">Aurora Navarro Villacampa</button>
+      <button id="name">Projects</button>
 
       <button id="cv"><a href="images/CV_Aurora_Navarro.pdf" target="_blank">CV</a></button>
       <button id="about">About</button>
@@ -40,7 +40,7 @@
 
       <div class="intro">
         <p>
-        <h1>In a nutshell</h1>
+        <h1>Once upon a time...</h1>
         <p>
 
         <div class="intro-wrap">
