--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 </nav>
 
 
-  <h2 class="intro-title"style="margin-top: 70px; margin-bottom: 20px; margin-right: 40px">Hi! I&#39;m Burak Türköz, industrial designer and aspiring maker.</h2>
+  <h2 class="intro-title"style="margin-top: 70px; margin-bottom: 20px; margin-right: 40px">You came to the right place.</h2>
 
-<h3 class="intro-subtitle"style="margin-top: 20px; margin-bottom: 70px; margin-right: 40px">I&#39;m currently studying at Aalto University New Media MA, specializing in digital fabrication.</h3>
+<h3 class="intro-subtitle"style="margin-top: 20px; margin-bottom: 70px; margin-right: 40px">Here's a little taste.</h3>
 
 <h2 class="intro-section-title"style="margin-top: 100px; margin-bottom: 30px; text-align: center;">ONGOING PROJECTS</h2>
 <a href="https://burakturkoz.gitlab.io/digital-fabrication-by-burak/" class="box-link">
@@ -52,8 +52,8 @@ As a part of my studies at Aalto Media Lab, I am partaking in the Fab Academy cu
 <a href="dry-noon" class="box-link">
   <div class="box box-drynoon">
     <div class="box-text">
-      <h3 class="box-title">DRY NOON</h3>
-      <h4 class="box-subtitle">A Game of Quickdraw With Arduinos</h4>
+      <h3 class="box-title">Oh My Hair</h3>
+      <h4 class="box-subtitle">A young black american woman struggles with maintining her hair in Finland.</h4>
       <p class="box-paragraph">
 A competitive physical game that uses Arduino boards, electronics, 3D printed parts ... and hairdryers.
 </p>
