--- a/index.html
+++ b/index.html
@@ -1,3 +1,26 @@
+<!DOCTYPE html>
+<html>
+
+<head>
+
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="home.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js"></script> -->
+  <script src="script.js"></script>
+
+
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+  </style>
+
+  <title>Home</title>
+  <link rel="icon" type="image/x-icon" href="images/favicon_c_s.png">
+</head>
+
 <div class="Home" style="width: 1440px; height: 966px; position: relative; background: linear-gradient(0deg, white 0%, white 100%), linear-gradient(180deg, #8ECAE6 0%, #219EBC 100%)">
   <div class="Menu" style="width: 1440px; height: 120px; left: -1px; top: 0px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
     <div class="Rectangle1" style="width: 1440px; height: 120px; left: 0px; top: 0px; position: absolute">
