--- a/Film.html
+++ b/Film.html
@@ -1,3 +1,26 @@
+<!DOCTYPE html>
+<html>
+
+<head>
+
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="film.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js"></script> -->
+  <script src="script.js"></script>
+
+
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+  </style>
+
+  <title>Film Assets</title>
+  <link rel="icon" type="image/x-icon" href="images/favicon_c_s.png">
+</head>
+
 <div class="FilmAssets" style="width: 1440px; height: 2727px; position: relative; background: #FFF1DD">
   <img class="Image4" style="width: 884px; height: 687px; left: 481px; top: 1595px; position: absolute" src="https://via.placeholder.com/884x687" />
   <div class="Rectangle4" style="width: 1500px; height: 160px; left: -60px; top: 160px; position: absolute; background: #219EBC; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)"></div>
