--- a/aboutj.html
+++ b/aboutj.html
@@ -1,3 +1,25 @@
+<!DOCTYPE html>
+<html>
+
+<head>
+
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="about.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js"></script> -->
+  <script src="script.js"></script>
+
+
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+  </style>
+
+  <title>About</title>
+  <link rel="icon" type="image/x-icon" href="images/favicon_c_s.png">
+</head>
 <div class="About" style="width: 1440px; height: 2328px; position: relative; background: linear-gradient(178deg, #8ECAE6 1%, #219EBC 38%)">
   <div class="Menu" style="width: 1440px; height: 120px; left: 0px; top: 0px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
     <div class="Rectangle1" style="width: 1440px; height: 120px; left: 0px; top: 0px; position: absolute">
