--- a/index.html
+++ b/index.html
@@ -31,10 +31,15 @@
       </div>
     </div>
     <div class="AboutJade" style="left: 230px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">About Jade</div>
+     <button id="about"><a href="about.html">About</a></button>
     <div class="Home" style="left: 58px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Home</div>
+     <button id="home"><a href="home.html">home</a></button>
     <div class="Projects" style="left: 497px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Projects</div>
+     <button id="projects"><a href="projects.html">Projects</a></button>
     <div class="CreativeOutlets" style="left: 711px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Creative Outlets</div>
+     <button id="creative"><a href="creative.html">Creative Outlets</a></button>
     <div class="Contact" style="left: 1065px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Contact</div>
+   <button id="Contact"><a href="contact.html">Contact</a></button>
   </div>
   <div class="Group21" style="width: 1154px; height: 712.22px; left: 360px; top: 216px; position: absolute">
     <div class="Ellipse2" style="width: 126.41px; height: 115.55px; left: 280.48px; top: 94.08px; position: absolute; transform: rotate(167.21deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
