--- a/index.html
+++ b/index.html
@@ -30,14 +30,30 @@
         <div class="Rectangle2" style="width: 61.20px; height: 102.55px; left: 21px; top: 13px; position: absolute; transform: rotate(-12.15deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(222, 77, 134, 0.50) 0%, rgba(254.65, 254.65, 254.65, 0.50) 100%)"></div>
       </div>
     </div>
+    <div class="MenuDropdown" style="width: 177px; height: 278px; position: relative; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
+  <div class="Rectangle60" style="width: 140px; height: 68px; left: 20px; top: 6px; position: absolute; background: #FF9575; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)"></div>
+  <button id="graphics"><a href="graphics.html">/Graphic Design</a></button>
+  <div class="Rectangle63" style="width: 140px; height: 68px; left: 20px; top: 74px; position: absolute; background: #FFA800; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)"></div>
+   <button id="Copy"><a href="copy.html">Copywriting and Conversation Design</a></button>
+  <div class="Rectangle62" style="width: 140px; height: 68px; left: 20px; top: 142px; position: absolute; background: #DE4D86; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)"></div>
+   <button id="ux"><a href="proto.html">UX Research and Design</a></button>
+  <div class="Rectangle61" style="width: 140px; height: 68px; left: 20px; top: 210px; position: absolute; background: #219EBC"></div>
+   <button id="Film"><a href="film.html">Film Assets</a></button>
+  <div class="Text" style="width: 177px; height: 253px; left: 0px; top: 0px; position: absolute">
+    <div class="GraphicDesignAndPromotionalAssets" style="width: 177px; height: 80px; left: 0px; top: 0px; position: absolute; text-align: center; color: #080705; font-size: 14px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Graphic Design and Promotional Assets</div>
+    <div class="CopywritingAndConversationDesign" style="width: 128px; height: 26px; left: 24px; top: 165px; position: absolute; text-align: center; color: #080705; font-size: 14px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Copywriting and Conversation Design</div>
+    <div class="UxResearchAndDesign" style="width: 128px; left: 26px; top: 92px; position: absolute; text-align: center; color: #080705; font-size: 14px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">UX Research and Design</div>
+    <div class="FilmPrototypeAssetsAndMotionGraphics" style="width: 138px; height: 16px; left: 21px; top: 237px; position: absolute; text-align: center; color: #080705; font-size: 14px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Film Prototype Assets and Motion Graphics</div>
+  </div>
+</div>
     <div class="AboutJade" style="left: 230px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">About Jade</div>
-     <button id="about"><a href="about.html">About</a></button>
+     <button id="about"><a href="aboutj.html">About</a></button>
     <div class="Home" style="left: 58px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Home</div>
-     <button id="home"><a href="home.html">home</a></button>
+     <button id="home"><a href="index.html">home</a></button>
     <div class="Projects" style="left: 497px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Projects</div>
      <button id="projects"><a href="projects.html">Projects</a></button>
     <div class="CreativeOutlets" style="left: 711px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Creative Outlets</div>
-     <button id="creative"><a href="creative.html">Creative Outlets</a></button>
+     <button id="creative"><a href="shorts.html">Creative Outlets</a></button>
     <div class="Contact" style="left: 1065px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Contact</div>
    <button id="Contact"><a href="contact.html">Contact</a></button>
   </div>
@@ -99,18 +115,7 @@
 </div>
  
   
-<div class="MenuDropdown" style="width: 177px; height: 278px; position: relative; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
-  <div class="Rectangle60" style="width: 140px; height: 68px; left: 20px; top: 6px; position: absolute; background: #FF9575; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)"></div>
-  <div class="Rectangle63" style="width: 140px; height: 68px; left: 20px; top: 74px; position: absolute; background: #FFA800; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)"></div>
-  <div class="Rectangle62" style="width: 140px; height: 68px; left: 20px; top: 142px; position: absolute; background: #DE4D86; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)"></div>
-  <div class="Rectangle61" style="width: 140px; height: 68px; left: 20px; top: 210px; position: absolute; background: #219EBC"></div>
-  <div class="Text" style="width: 177px; height: 253px; left: 0px; top: 0px; position: absolute">
-    <div class="GraphicDesignAndPromotionalAssets" style="width: 177px; height: 80px; left: 0px; top: 0px; position: absolute; text-align: center; color: #080705; font-size: 14px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Graphic Design and Promotional Assets</div>
-    <div class="CopywritingAndConversationDesign" style="width: 128px; height: 26px; left: 24px; top: 165px; position: absolute; text-align: center; color: #080705; font-size: 14px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Copywriting and Conversation Design</div>
-    <div class="UxResearchAndDesign" style="width: 128px; left: 26px; top: 92px; position: absolute; text-align: center; color: #080705; font-size: 14px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">UX Research and Design</div>
-    <div class="FilmPrototypeAssetsAndMotionGraphics" style="width: 138px; height: 16px; left: 21px; top: 237px; position: absolute; text-align: center; color: #080705; font-size: 14px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Film Prototype Assets and Motion Graphics</div>
-  </div>
-</div>
+
 
   
   <div class="JuhaniSProfile" style="width: 375px; height: 760px; position: relative; background: white">
