--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
       </div>
     </div>
     <div class="MenuDropdown" style="width: 177px; height: 278px; position: relative; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
-  <div class="Rectangle60" style="width: 140px; height: 68px; left: 20px; top: 6px; position: absolute; background: #FF9575; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)"></div>
-  <button id="graphics"><a href="graphics.html">/Graphic Design</a></button>
-  <div class="Rectangle63" style="width: 140px; height: 68px; left: 20px; top: 74px; position: absolute; background: #FFA800; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)"></div>
-   <button id="Copy"><a href="copy.html">Copywriting and Conversation Design</a></button>
-  <div class="Rectangle62" style="width: 140px; height: 68px; left: 20px; top: 142px; position: absolute; background: #DE4D86; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)"></div>
-   <button id="ux"><a href="proto.html">UX Research and Design</a></button>
+  <div class="Rectangle60" style="width: 140px; height: 68px; left: 20px; top: 6px; position: absolute; background: #FF9575; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
+  <button id="graphics"><a href="graphics.html">/Graphic Design</a></button></div>
+  <div class="Rectangle63" style="width: 140px; height: 68px; left: 20px; top: 74px; position: absolute; background: #FFA800; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
+   <button id="Copy"><a href="copy.html">Copywriting and Conversation Design</a></button></div>
+  <div class="Rectangle62" style="width: 140px; height: 68px; left: 20px; top: 142px; position: absolute; background: #DE4D86; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
+   <button id="ux"><a href="proto.html">UX Research and Design</a></button></div>
   <div class="Rectangle61" style="width: 140px; height: 68px; left: 20px; top: 210px; position: absolute; background: #219EBC"></div>
    <button id="Film"><a href="film.html">Film Assets</a></button>
   <div class="Text" style="width: 177px; height: 253px; left: 0px; top: 0px; position: absolute">
