--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 </head>
 
 <div class="Home" style="width: auto; height: 966px; position: relative; background: linear-gradient(0deg, white 0%, white 100%), linear-gradient(180deg, #8ECAE6 0%, #219EBC 100%)">
-  <div class="Menu" style="width: auto; height: 120px; left: -1px; top: 0px; position: relative; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
-    <div class="Rectangle1" style="width: auto; height: 120px; left: 0px; top: 0px; position: relative">
-      <div class="Rectangle1" style="width: 1920px; height: 120px; left: 0px; top: 0px; position: relative; background: #8ECAE6"></div>
+  <div class="Menu" style="height: 120px; left: -1px; top: 0px; position: relative; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
+    <div class="Rectangle1" style="height: 120px; left: 0px; top: 0px; position: relative">
+      <div class="Rectangle1" style=" height: 120px; left: 0px; top: 0px; position: relative; background: #8ECAE6"></div>
       <div class="Logo" style="width: 101.90px; height: 113.37px; left: 1310px; top: 3px; position: relative">
         <div class="Ellipse4" style="width: 46.73px; height: 98.96px; left: 0px; top: 0px; position: absolute; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.50) 0%, rgba(254.65, 254.65, 254.65, 0.50) 100%)"></div>
         <div class="Rectangle2" style="width: 61.20px; height: 102.55px; left: 21px; top: 13px; position: absolute; transform: rotate(-12.15deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(222, 77, 134, 0.50) 0%, rgba(254.65, 254.65, 254.65, 0.50) 100%)"></div>
