--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       </div>
     </div>
 
-    <div class="AboutJade" style="left: 230px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">About Jade</div>
-     <button id="about"><a href="aboutj.html">About</a></button>
+    <div class="AboutJade" <button id="about"><a href="aboutj.html">About</a>style="left: 230px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">About Jade</button></div>
+     
     <div class="Home" style="left: 58px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Home</div>
      <button id="home"><a href="index.html">home</a></button>
     <div class="Projects" style="left: 497px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Projects</div>
