--- a/index.html
+++ b/index.html
@@ -21,6 +21,51 @@
   <link rel="icon" type="image/x-icon" href="images/favicon_c_s.png">
 </head>
 
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 0;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111;
+}
+
+.active {
+  background-color: #4CAF50;
+}
+</style>
+</head>
+<body>
+
+<div class="header">
+  <h2>Scroll Down</h2>
+  <p>Scroll down to see the sticky effect.</p>
+</div>
+
+<ul>
+  <li><a class="active" href="#home">Home</a></li>
+  <li><a href="#news">News</a></li>
+  <li><a href="#contact">Contact</a></li>
+</ul>
+
 <div class="Home" style="width: auto; height: 966px; position: relative; background: linear-gradient(0deg, white 0%, white 100%), linear-gradient(180deg, #8ECAE6 0%, #219EBC 100%)">
   <div class="Menu" style="height: 120px; left: -1px; top: 0px; position: relative; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
     <div class="Rectangle1" style="height: 120px; left: 0px; top: 0px; position: relative">
