--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ li a:hover {
 
      <button id="about"><a href="aboutj.html">About</a></button>
     <div class="Home" style="left: 58px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Home</div>
-     <button id="home"><a href="index.html">Home</a></button>
+     <button type="button" class="button" button id="home"><a href="index.html">Home</a></button>
     <div class="Projects" style="left: 497px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Projects</div>
      <button id="projects"><a href="projects.html">Projects</a></button>
     <div class="CreativeOutlets" style="left: 711px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Creative Outlets</div>
