--- a/shorts.html
+++ b/shorts.html
@@ -475,6 +475,93 @@
         <div class="Ellipse8" style="width: 118px; height: 199.50px; left: 69.36px; top: 212.73px; position: absolute; transform: rotate(-126deg); transform-origin: 0 0; background: linear-gradient(90deg, #FFF1DD 67%, #FFA800 100%)"></div>
       </div>
     </div>
+    <div class="Pattern" style="width: 402.04px; height: 318.90px; left: 196px; top: 559px; position: absolute">
+        <div class="Ellipse5" style="width: 118px; height: 199.50px; left: 230.98px; top: 197.76px; position: absolute; transform: rotate(98deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse6" style="width: 118px; height: 199.50px; left: 350.31px; top: 9px; position: absolute; transform: rotate(64deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse7" style="width: 118px; height: 199.50px; left: 171px; top: 280.83px; position: absolute; transform: rotate(-79deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse8" style="width: 118px; height: 199.50px; left: 69.36px; top: 212.73px; position: absolute; transform: rotate(-126deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+      </div>
+      <div class="Pattern" style="width: 402.04px; height: 318.90px; left: 786.04px; top: 620.90px; position: absolute; transform: rotate(-180deg); transform-origin: 0 0">
+        <div class="Ellipse5" style="width: 118px; height: 199.50px; left: -230.98px; top: -197.76px; position: absolute; transform: rotate(-82deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse6" style="width: 118px; height: 199.50px; left: -350.31px; top: -9px; position: absolute; transform: rotate(-116deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse7" style="width: 118px; height: 199.50px; left: -171px; top: -280.83px; position: absolute; transform: rotate(101deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse8" style="width: 118px; height: 199.50px; left: -69.36px; top: -212.73px; position: absolute; transform: rotate(54deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+      </div>
+      <div class="Pattern" style="width: 402.04px; height: 318.90px; left: 555px; top: 559px; position: absolute">
+        <div class="Ellipse5" style="width: 118px; height: 199.50px; left: 230.98px; top: 197.76px; position: absolute; transform: rotate(98deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse6" style="width: 118px; height: 199.50px; left: 350.31px; top: 9px; position: absolute; transform: rotate(64deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse7" style="width: 118px; height: 199.50px; left: 171px; top: 280.83px; position: absolute; transform: rotate(-79deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse8" style="width: 118px; height: 199.50px; left: 69.36px; top: 212.73px; position: absolute; transform: rotate(-126deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+      </div>
+      <div class="Pattern" style="width: 402.04px; height: 318.90px; left: 750px; top: 281px; position: absolute">
+        <div class="Ellipse5" style="width: 118px; height: 199.50px; left: 230.98px; top: 197.76px; position: absolute; transform: rotate(98deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse6" style="width: 118px; height: 199.50px; left: 350.31px; top: 9px; position: absolute; transform: rotate(64deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse7" style="width: 118px; height: 199.50px; left: 171px; top: 280.83px; position: absolute; transform: rotate(-79deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse8" style="width: 118px; height: 199.50px; left: 69.36px; top: 212.73px; position: absolute; transform: rotate(-126deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+      </div>
+      <div class="Pattern" style="width: 402.04px; height: 318.90px; left: 1287px; top: 559px; position: absolute">
+        <div class="Ellipse5" style="width: 118px; height: 199.50px; left: 230.98px; top: 197.76px; position: absolute; transform: rotate(98deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse6" style="width: 118px; height: 199.50px; left: 350.31px; top: 9px; position: absolute; transform: rotate(64deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse7" style="width: 118px; height: 199.50px; left: 171px; top: 280.83px; position: absolute; transform: rotate(-79deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse8" style="width: 118px; height: 199.50px; left: 69.36px; top: 212.73px; position: absolute; transform: rotate(-126deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+      </div>
+      <div class="Pattern" style="width: 402.04px; height: 318.90px; left: 0px; top: 278px; position: absolute">
+        <div class="Ellipse5" style="width: 118px; height: 199.50px; left: 230.98px; top: 197.76px; position: absolute; transform: rotate(98deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse6" style="width: 118px; height: 199.50px; left: 350.31px; top: 9px; position: absolute; transform: rotate(64deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse7" style="width: 118px; height: 199.50px; left: 171px; top: 280.83px; position: absolute; transform: rotate(-79deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse8" style="width: 118px; height: 199.50px; left: 69.36px; top: 212.73px; position: absolute; transform: rotate(-126deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+      </div>
+      <div class="Pattern" style="width: 402.04px; height: 318.90px; left: 137px; top: 4px; position: absolute">
+        <div class="Ellipse5" style="width: 118px; height: 199.50px; left: 230.98px; top: 197.76px; position: absolute; transform: rotate(98deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse6" style="width: 118px; height: 199.50px; left: 350.31px; top: 9px; position: absolute; transform: rotate(64deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse7" style="width: 118px; height: 199.50px; left: 171px; top: 280.83px; position: absolute; transform: rotate(-79deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse8" style="width: 118px; height: 199.50px; left: 69.36px; top: 212.73px; position: absolute; transform: rotate(-126deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+      </div>
+      <div class="Pattern" style="width: 402.04px; height: 318.90px; left: 501px; top: 0px; position: absolute">
+        <div class="Ellipse5" style="width: 118px; height: 199.50px; left: 230.98px; top: 197.76px; position: absolute; transform: rotate(98deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse6" style="width: 118px; height: 199.50px; left: 350.31px; top: 9px; position: absolute; transform: rotate(64deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse7" style="width: 118px; height: 199.50px; left: 171px; top: 280.83px; position: absolute; transform: rotate(-79deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse8" style="width: 118px; height: 199.50px; left: 69.36px; top: 212.73px; position: absolute; transform: rotate(-126deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+      </div>
+      <div class="Pattern" style="width: 402.04px; height: 318.90px; left: 865px; top: 0px; position: absolute">
+        <div class="Ellipse5" style="width: 118px; height: 199.50px; left: 230.98px; top: 197.76px; position: absolute; transform: rotate(98deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse6" style="width: 118px; height: 199.50px; left: 350.31px; top: 9px; position: absolute; transform: rotate(64deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse7" style="width: 118px; height: 199.50px; left: 171px; top: 280.83px; position: absolute; transform: rotate(-79deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse8" style="width: 118px; height: 199.50px; left: 69.36px; top: 212.73px; position: absolute; transform: rotate(-126deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+      </div>
+      <div class="Pattern" style="width: 402.04px; height: 318.90px; left: 1231px; top: 0px; position: absolute">
+        <div class="Ellipse5" style="width: 118px; height: 199.50px; left: 230.98px; top: 197.76px; position: absolute; transform: rotate(98deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse6" style="width: 118px; height: 199.50px; left: 350.31px; top: 9px; position: absolute; transform: rotate(64deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse7" style="width: 118px; height: 199.50px; left: 171px; top: 280.83px; position: absolute; transform: rotate(-79deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse8" style="width: 118px; height: 199.50px; left: 69.36px; top: 212.73px; position: absolute; transform: rotate(-126deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+      </div>
+      <div class="Pattern" style="width: 402.04px; height: 318.90px; left: 1116px; top: 278px; position: absolute">
+        <div class="Ellipse5" style="width: 118px; height: 199.50px; left: 230.98px; top: 197.76px; position: absolute; transform: rotate(98deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse6" style="width: 118px; height: 199.50px; left: 350.31px; top: 9px; position: absolute; transform: rotate(64deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse7" style="width: 118px; height: 199.50px; left: 171px; top: 280.83px; position: absolute; transform: rotate(-79deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse8" style="width: 118px; height: 199.50px; left: 69.36px; top: 212.73px; position: absolute; transform: rotate(-126deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+      </div>
+      <div class="Pattern" style="width: 402.04px; height: 318.90px; left: 1482px; top: 291px; position: absolute">
+        <div class="Ellipse5" style="width: 118px; height: 199.50px; left: 230.98px; top: 197.76px; position: absolute; transform: rotate(98deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse6" style="width: 118px; height: 199.50px; left: 350.31px; top: 9px; position: absolute; transform: rotate(64deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse7" style="width: 118px; height: 199.50px; left: 171px; top: 280.83px; position: absolute; transform: rotate(-79deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse8" style="width: 118px; height: 199.50px; left: 69.36px; top: 212.73px; position: absolute; transform: rotate(-126deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+      </div>
+      <div class="Pattern" style="width: 402.04px; height: 318.90px; left: 921px; top: 559px; position: absolute">
+        <div class="Ellipse5" style="width: 118px; height: 199.50px; left: 230.98px; top: 197.76px; position: absolute; transform: rotate(98deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse6" style="width: 118px; height: 199.50px; left: 350.31px; top: 9px; position: absolute; transform: rotate(64deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse7" style="width: 118px; height: 199.50px; left: 171px; top: 280.83px; position: absolute; transform: rotate(-79deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse8" style="width: 118px; height: 199.50px; left: 69.36px; top: 212.73px; position: absolute; transform: rotate(-126deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+      </div>
+      <div class="Pattern" style="width: 402.04px; height: 318.90px; left: 1596px; top: 4px; position: absolute">
+        <div class="Ellipse5" style="width: 118px; height: 199.50px; left: 230.98px; top: 197.76px; position: absolute; transform: rotate(98deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse6" style="width: 118px; height: 199.50px; left: 350.31px; top: 9px; position: absolute; transform: rotate(64deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse7" style="width: 118px; height: 199.50px; left: 171px; top: 280.83px; position: absolute; transform: rotate(-79deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+        <div class="Ellipse8" style="width: 118px; height: 199.50px; left: 69.36px; top: 212.73px; position: absolute; transform: rotate(-126deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.42) 40%, rgba(222, 77, 134, 0.42) 63%)"></div>
+      </div>
+    </div>
+  </div>
+
   
   
 
