--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,15 @@
 <div class="Contact" style="width: 1440px; height: 3436px; position: relative; background: #FFF1DD">
   <div class="Design" style="width: 2000.04px; height: 877.90px; left: -240px; top: 2338px; position: absolute">
+
+    <div class="Contact" style="width: 1440px; height: 966px; position: relative; background: linear-gradient(180deg, #8ECAE6 0%, #219EBC 100%)">
+  <div class="Menu" style="width: 1440px; height: 120px; left: 0px; top: 0px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
+    <div class="Rectangle1" style="width: 1440px; height: 120px; left: 0px; top: 0px; position: absolute">
+      <div class="Rectangle1" style="width: 1440px; height: 120px; left: 0px; top: 0px; position: absolute; background: #8ECAE6"></div>
+      <div class="Logo" style="width: 101.90px; height: 113.37px; left: 1310px; top: 3px; position: absolute">
+        <div class="Ellipse4" style="width: 46.73px; height: 98.96px; left: 0px; top: 0px; position: absolute; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.50) 0%, rgba(254.65, 254.65, 254.65, 0.50) 100%)"></div>
+        <div class="Rectangle2" style="width: 61.20px; height: 102.55px; left: 21px; top: 13px; position: absolute; transform: rotate(-12.15deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(222, 77, 134, 0.50) 0%, rgba(254.65, 254.65, 254.65, 0.50) 100%)"></div>
+      </div>
+    </div>
       
       <div class="AboutJade" style="left: 230px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">About Jade</div>
     <div class="Home" style="left: 58px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Home</div>
