--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: #8ECAE6;
   position: -webkit-sticky; /* Safari */
   position: sticky;
   top: 0;
@@ -49,9 +49,7 @@ li a:hover {
 .active {
   background-color: #4CAF50;
 }
-</style>
-</head>
-<body>
+
 
 <div class="Home" style="width: auto; height: 966px; position: relative; background: linear-gradient(0deg, white 0%, white 100%), linear-gradient(180deg, #8ECAE6 0%, #219EBC 100%)">
   <div class="Menu" style="height: 120px; left: -1px; top: 0px; position: relative; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
@@ -60,7 +58,9 @@ li a:hover {
       <div class="Logo" style="width: 101.90px; height: 113.37px; left: 1310px; top: 3px; position: relative">
         <div class="Ellipse4" style="width: 46.73px; height: 98.96px; left: 0px; top: 0px; position: absolute; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.50) 0%, rgba(254.65, 254.65, 254.65, 0.50) 100%)"></div>
         <div class="Rectangle2" style="width: 61.20px; height: 102.55px; left: 21px; top: 13px; position: absolute; transform: rotate(-12.15deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(222, 77, 134, 0.50) 0%, rgba(254.65, 254.65, 254.65, 0.50) 100%)"></div>
-  
+  </div>
+    </div>
+    
     <div class="Home" style="left: 58px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Home</div>
      <button type="button" class="button" button id="home"><a href="index.html">Home</a></button>
     <button id="about"><a href="aboutj.html">About</a></button>
@@ -70,9 +70,12 @@ li a:hover {
      <button id="creative"><a href="shorts.html">Creative Outlets</a></button>
     <div class="Contact" style="left: 1065px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Contact</div>
    <button id="Contact"><a href="contact.html">Contact</a></button>
-  </div>
-      </div>
+  
+      
     </div>
+  </style>
+</head>
+<body>
 <!--
     <div class="MenuDropdown" style="width: 177px; height: 278px; position: relative; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
   <div class="Rectangle60" style="width: 140px; height: 68px; left: 20px; top: 6px; position: absolute; background: #FF9575; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
