--- a/index.html
+++ b/index.html
@@ -49,7 +49,14 @@ li a:hover {
 .active {
   background-color: #4CAF50;
 }
-
+<nav class="sticky">
+	<ul class="list-inline">
+		<li><a href="#a">Home</a></li>
+		<li><a href="#b">About</a></li>
+		<li><a href="#c">Projects</a></li>
+		<li><a href="#d">Creative Outlets</a></li>
+	</ul>
+</nav>
 
 <div class="Home" style="width: auto; height: 966px; position: relative; background: linear-gradient(0deg, white 0%, white 100%), linear-gradient(180deg, #8ECAE6 0%, #219EBC 100%)">
   <div class="Menu" style="height: 120px; left: -1px; top: 0px; position: relative; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
