--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <style>
 <nav class="sticky">
 	<ul class="list-inline">
-	   </li><button id="about"><a href="aboutj.html">About</a></button></>
+	   </li><button id="about"><a href="aboutj.html">About</a></button></li>
   </ul>
 		<div class="Home" style="width: auto; height: 966px; position: relative; background: linear-gradient(0deg, white 0%, white 100%), linear-gradient(180deg, #8ECAE6 0%, #219EBC 100%)">
   <div class="Menu" style="height: 120px; left: -1px; top: 0px; position: relative; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
