--- a/index.html
+++ b/index.html
@@ -2,7 +2,42 @@
 <html>
 
 <head>
+<div id="wrapper">
 
+	<header id="header">
+			<div class="container">
+				<div class="nav-holder">
+					<a href="#" class="nav-opener"><span></span></a>
+				</div>
+					<nav id="navigation">
+
+						<div class="nav-drop">
+
+							<ul class="link-list">
+								<li><a href="aboutj.html">About</a></li>
+								<li><a href="/work" >Work</a></li>
+								<li><a href="/about" >About</a></li>
+								<li><a href="/blog" >Blog</a></li>
+								<!--<li><a href="/news" >News</a></li>-->
+								<li><a href="/contact" >Contact</a></li>
+								<li class="hidden"><a href="/careers" >Careers</a></li>
+								<li class="hidden"><a href="/projects" >Projects</a></li>
+								<li class="hidden"><a href="/send-a-file" >Send A File</a></li>
+								<li>
+									<form action="https://www.chicagoscenic.com/search/results" class="search-form">
+											<fieldset>
+												<input type="search" name="q" >
+												<button type="submit"></button>
+												</fieldset>
+									</form>
+								</li>
+							</ul>
+
+
+						</div>
+					</nav>
+				</div>
+			</header>
   <meta charset="utf-8">
   <link rel="stylesheet" href="home.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,7 +63,7 @@
   <style>
 <nav class="sticky">
 	<ul class="list-inline">
-	   </li><a href="aboutj.html">About</a></li>
+	   <li><a href="aboutj.html">About</a></li>
   </ul>
 		<div class="Home" style="width: auto; height: 966px; position: relative; background: linear-gradient(0deg, white 0%, white 100%), linear-gradient(180deg, #8ECAE6 0%, #219EBC 100%)">
   <div class="Menu" style="height: 120px; left: -1px; top: 0px; position: relative; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
