--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 						<div class="nav-drop">
 
 							<ul class="link-list">
-								<li><a href="aboutj.html">About</a></li>
+								<li><a href="about.html">About</a></li>
 								<li><a href="/work" >Work</a></li>
 								<li><a href="/about" >About</a></li>
 								<li><a href="/blog" >Blog</a></li>
