--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+	<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="home.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js"></script> -->
+  <script src="script.js"></script>
+	
 <div id="wrapper">
 
 	<header id="header">
@@ -20,7 +26,7 @@
 								<li><a href="/blog" >Blog</a></li>
 								<!--<li><a href="/news" >News</a></li>-->
 								<li><a href="/contact" >Contact</a></li>
-								<li class="hidden"><a href="/careers" >Careers</a></li>
+								<li class="hidden"><a href="/about" >Careers</a></li>
 								<li class="hidden"><a href="/projects" >Projects</a></li>
 								<li class="hidden"><a href="/send-a-file" >Send A File</a></li>
 								<li>
@@ -38,12 +44,6 @@
 					</nav>
 				</div>
 			</header>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="home.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <!-- <script src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js"></script> -->
-  <script src="script.js"></script>
 
 <div class="Menu" style="width: relative; height: 120px; left: 0px; top: 0px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
     <div class="Rectangle1" style="relative: 1440px; height: 120px; left: 0px; top: 0px; position: absolute">
