--- a/index.html
+++ b/index.html
@@ -22,12 +22,11 @@
 							<ul class="link-list">
 								<li><a href="about.html">About</a></li>
 								<li><a href="/work" >Work</a></li>
-								<li><a href="/about" >About</a></li>
+								<li><a href="/about.html" >About</a></li>
 								<li><a href="/blog" >Blog</a></li>
-								<!--<li><a href="/news" >News</a></li>-->
-								<li><a href="/contact" >Contact</a></li>
-								<li class="hidden"><a href="/about" >Careers</a></li>
-								<li class="hidden"><a href="/projects" >Projects</a></li>
+								<li><a href="/contact.html" >Contact</a></li>
+								<li class="hidden"><a href="/about.html" >Careers</a></li>
+								<li class="hidden"><a href="/projects.html" >Projects</a></li>
 								<li class="hidden"><a href="/send-a-file" >Send A File</a></li>
 								<li>
 									<form action="https://www.chicagoscenic.com/search/results" class="search-form">
@@ -53,6 +52,7 @@
         <div class="Rectangle2" style="width: 61.20px; height: 102.55px; left: 21px; top: 13px; position: absolute; transform: rotate(-12.15deg); transform-origin: 0 0; background: linear-gradient(180deg, rgba(222, 77, 134, 0.50) 0%, rgba(254.65, 254.65, 254.65, 0.50) 100%)"></div>
       </div>
     </div>
+	
     <div class="AboutJade" style="left: 230px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">About Jade</div>
     <div class="Home" style="left: 58px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Home</div>
     <div class="Projects" style="left: 497px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Projects</div>
@@ -60,12 +60,14 @@
     <div class="Contact" style="left: 1065px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Contact</div>
   </div>
 
-  <style>
+<style>
+	
 <nav class="sticky">
 	<ul class="list-inline">
 	   <li><a href="aboutj.html">About</a></li>
-  </ul>
-		<div class="Home" style="width: auto; height: 966px; position: relative; background: linear-gradient(0deg, white 0%, white 100%), linear-gradient(180deg, #8ECAE6 0%, #219EBC 100%)">
+</ul>
+	
+<div class="Home" style="width: auto; height: 966px; position: relative; background: linear-gradient(0deg, white 0%, white 100%), linear-gradient(180deg, #8ECAE6 0%, #219EBC 100%)">
   <div class="Menu" style="height: 120px; left: -1px; top: 0px; position: relative; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
     <div class="Rectangle1" style="height: 120px; left: 0px; top: 0px; position: relative">
       <div class="Rectangle1" style=" height: 120px; left: 0px; top: 0px; position: relative; background: #8ECAE6"></div>
