--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				</div>
 					<nav id="navigation">
 
-						<div class="nav-drop">
+						<div class="menu">
 
 							<ul class="link-list">
 								<li><a href="about.html">About</a></li>
@@ -45,7 +45,7 @@
 			</header>
 
 <div class="Menu" style="width: relative; height: 120px; left: 0px; top: 0px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
-	<div class="Rectangle1" style="relative: 1440px; height: 120px; left: 0px; top: 0px; position: absolute">
+	<!--<div class="Rectangle1" style="relative: 1440px; height: 120px; left: 0px; top: 0px; position: absolute">-->
       <div class="Rectangle1" style="relative: 1440px; height: 120px; left: 0px; top: 0px; position: absolute; background: #8ECAE6"></div>
       <div class="Logo" style="width: relative; height: 113.37px; left: 1310px; top: 3px; position: absolute">
         <div class="Ellipse4" style="width: 46.73px; height: 98.96px; left: 0px; top: 0px; position: absolute; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.50) 0%, rgba(254.65, 254.65, 254.65, 0.50) 100%)"></div>
