--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 						
 
-							<ul class="link-list">
+							<ul class="menu">
 								<li><a href="about.html">About</a></li>
 								<li><a href="/work" >Work</a></li>
 								<li><a href="/about.html" >About</a></li>
