--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <script src="script.js"></script>
 	
 <div id="wrapper">
-<div class="Menu" style="width: relative; height: 120px; left: 0px; top: 0px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
-	<!--<div class="Rectangle1" style="relative: 1440px; height: 120px; left: 0px; top: 0px; position: absolute">-->
+<div class="menu" style="width: relative; height: 120px; left: 0px; top: 0px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
+	<div class="Rectangle1" style="relative: 1440px; height: 120px; left: 0px; top: 0px; position: absolute">
       <div class="Rectangle1" style="width:relative: 1440px; height: 120px; left: 0px; top: 0px; position: absolute; background: #8ECAE6"></div>
       <div class="Logo" style="width: relative; height: 113.37px; left: 1310px; top: 3px; position: absolute">
         <div class="Ellipse4" style="width: 46.73px; height: 98.96px; left: 0px; top: 0px; position: absolute; background: linear-gradient(180deg, rgba(255, 168.30, 0, 0.50) 0%, rgba(254.65, 254.65, 254.65, 0.50) 100%)"></div>
@@ -24,7 +24,7 @@
     <div class="CreativeOutlets" style="left: 711px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Creative Outlets</div>
     <div class="Contact" style="left: 1065px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Contact</div>
   </div>
-	<header id="header">
+<header id="header">
 					<nav id="navigation">
 
 						
@@ -35,7 +35,7 @@
 								<li><a href="/about.html" >About</a></li>
 								<li><a href="/blog" >Blog</a></li>
 								<li><a href="/contact.html" >Contact</a></li>
-								<li class="hidden"><a href="/about.html" >Careers</a></li>
+								<!--<li class="hidden"><a href="/about.html" >Careers</a></li>
 								<li class="hidden"><a href="/projects.html" >Projects</a></li>
 								<li class="hidden"><a href="/send-a-file" >Send A File</a></li>
 								<li>
@@ -45,7 +45,7 @@
 												<button type="submit"></button>
 												</fieldset>
 									</form>
-								</li>
+								</li>-->
 							</ul>
 
 
