--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 <header id="header">
 	<nav id="navigation">
 		<nav class="sticky">
-			<ul class="menu">
-	
-				<li><a href="jaderoberts/work" >Work</a></li>
+			<ul class=".menu">
+				<li><a href="jaderoberts/home.html" >Home</a></li>
 				<li><a href="jaderoberts/about.html" >About</a></li>
-				<li><a href="jaderoberts/blog" >Blog</a></li>
+				<li><a href="jaderoberts/projects.html" >Work</a></li>	
+				<li><a href="jaderoberts/shorts.html" >Creative Outlets</a></li>	
 				<li><a href=jaderoberts/contact.html" >Contact</a></li>
 				<!--<li class="hidden"><a href="/about.html" >Careers</a></li>
 				<li class="hidden"><a href="/projects.html" >Projects</a></li>
