--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<nav id="navigation">
 		<nav class="sticky">
 			<ul class=".menu">
-				<li><a href="jaderoberts/home.html" >Home</a></li>
+				<li class=".menu"><a href="jaderoberts/home.html" >Home</a></li>
 				<li><a href="jaderoberts/about.html" >About</a></li>
 				<li><a href="jaderoberts/projects.html" >Work</a></li>	
 				<li><a href="jaderoberts/shorts.html" >Creative Outlets</a></li>	
