--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 <header id="header">
 	<nav id="navigation">
 		<nav class="sticky">
-			<ul class=".menu">
-				<li class=".menu"><a href="jaderoberts/home.html" >Home</a></li>
+			<ul class="menu">
+				<li class="menu"><a href="jaderoberts/home.html" >Home</a></li>
 				<li><a href="jaderoberts/about.html" >About</a></li>
 				<li><a href="jaderoberts/projects.html" >Work</a></li>	
 				<li><a href="jaderoberts/shorts.html" >Creative Outlets</a></li>	
