--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- <script src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js"></script> -->
   <script src="script.js"></script>
 	
-<div id="wrapper">
+<!--<div id="wrapper">
 <div class="menu" style="width: relative; height: 120px; left: 0px; top: 0px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
 	<div class="Rectangle1" style="relative: 1440px; height: 120px; left: 0px; top: 0px; position: absolute">
       <div class="Rectangle1" style="width:relative: 1440px; height: 120px; left: 0px; top: 0px; position: absolute; background: #8ECAE6"></div>
@@ -24,6 +24,7 @@
     <div class="CreativeOutlets" style="left: 711px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Creative Outlets</div>
     <div class="Contact" style="left: 1065px; top: 37px; position: absolute; color: black; font-size: 40px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Contact</div>
   </div>
+	-->
 
 <header id="header">
 	<nav id="navigation">
