--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 	<nav id="navigation">
 		<nav class="sticky">
 			<ul class="menu">
-				<li class="menu"><a href="jaderoberts/home.html" >Home</a></li>
-				<li><a href="jaderoberts/about.html" >About</a></li>
-				<li><a href="jaderoberts/projects.html" >Work</a></li>	
-				<li><a href="jaderoberts/shorts.html" >Creative Outlets</a></li>	
+				<li class="menu"><a href="home.html" >Home</a></li>
+				<li cxlass =".menu"><a href="about.html" >About</a></li>
+				<li><a href="projects.html" >Work</a></li>	
+				<li><a href="shorts.html" >Creative Outlets</a></li>	
 				<li><a href=jaderoberts/contact.html" >Contact</a></li>
 				<!--<li class="hidden"><a href="/about.html" >Careers</a></li>
 				<li class="hidden"><a href="/projects.html" >Projects</a></li>
