--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<nav class="sticky">
 			<ul class="menu">
 				<li class="menu"><a href="home.html" >Home</a></li>
-				<li class =".menu"><a href="about.html" >About</a></li>
+				<li class ="menu"><a href="about.html" >About</a></li>
 				<li><a href="projects.html" >Work</a></li>	
 				<li><a href="shorts.html" >Creative Outlets</a></li>	
 				<li><a href="jaderoberts/contact.html" >Contact</a></li>
