--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 	<nav id="navigation">
 		<nav class="sticky">
 			<ul class="menu">
-				<li class="menu"><a href="home.html" >Home</a></li>
+				<li class="menu"><a href="index.html" >Home</a></li>
 				<li class ="menu"><a href="about.html" >About</a></li>
 				<li><a href="projects.html" >Work</a></li>	
 				<li><a href="shorts.html" >Creative Outlets</a></li>	
-				<li><a href="jaderoberts/contact.html" >Contact</a></li>
+				<li><a href="contact.html" >Contact</a></li>
 				<!--<li class="hidden"><a href="/about.html" >Careers</a></li>
 				<li class="hidden"><a href="/projects.html" >Projects</a></li>
 				<li class="hidden"><a href="/send-a-file" >Send A File</a></li>
