--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	-->
 
 
-<nav class="sticky">
+<!--nav class="sticky"> -->
 <ul class="menu">
     <li class="menu"><a href="index.html">Home</a></li>
     <li class="menu"><a href="about.html">About</a></li>
@@ -35,7 +35,8 @@
     <li><a href="shorts.html">Creative Outlets</a></li>
     <li><a href="contact.html">Contact</a></li>
 </ul>
-</nav>
+
+	
 
 <style>
 	
