--- a/index.html
+++ b/index.html
@@ -29,6 +29,19 @@
 
 
 <!--nav class="sticky"> --><style>
+	body {
+  /* Define the gradient */
+  background-image: linear-gradient(180deg, rgba(222, 77, 134, 0.50) 0%, rgba(254.65, 254.65, 254.65, 0.50) 100%);
+;
+  
+  /* Set the height to 100% to take the full view */
+  height: 100%;
+  
+  /* Set the margin to 0 to remove browser default margins */
+  margin: 0;
+}
+
+	
 <ul class="menu">
     <li class="menu"><a href="index.html">Home</a></li>
     <li class="menu"><a href="about.html">About</a></li>
@@ -37,7 +50,9 @@
     <li><a href="contact.html">Contact</a></li>
 </ul>
 
-	
+	</style>
+</head>
+<body>
 
 
 	
@@ -69,9 +84,7 @@
 </nav>
 
 
-  </style>
-</head>
-<body>
+
 <!--
     <div class="MenuDropdown" style="width: 177px; height: 278px; position: relative; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
   <div class="Rectangle60" style="width: 140px; height: 68px; left: 20px; top: 6px; position: absolute; background: #FF9575; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
