--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 <ul class="menu">
     <li class="menu"><a href="index.html">Home</a></li>
     <li class="menu"><a href="about.html">About</a></li>
-    <li><a href="projects.html">Work</a></li>
-    <li><a href="shorts.html">Creative Outlets</a></li>
-    <li><a href="contact.html">Contact</a></li>
+    <li class="menu"><a href="projects.html">Work</a></li>
+    <li class="menu"><a href="shorts.html">Creative Outlets</a></li>
+    <li class="menu"><a href="contact.html">Contact</a></li>
 </ul>
 
 	</style>
