--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <li class="menu"><a href="projects.html">Work</a></li>
     <li class="menu"><a href="shorts.html">Creative Outlets</a></li>
     <li class="menu"><a href="contact.html">Contact</a></li>
+	 <li class="menu"><a href="example.html">example</a></li>
 </ul>
 
 	</style>
