--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js"></script>
   <script src="script.js"></script>
-	
+<section>
 <!--<div id="wrapper">
 <div class="menu" style="width: relative; height: 120px; left: 0px; top: 0px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
 	<div class="Rectangle1" style="relative: 1440px; height: 120px; left: 0px; top: 0px; position: absolute">
@@ -43,7 +43,9 @@
 
 	</style>
 </head>
-<body>
+</section>
+	<section>
+	<body>
 body {
   /* Define the gradient */
   background-image: linear-gradient(180deg, rgba(222, 77, 134, 0.50) 0%, rgba(254.65, 254.65, 254.65, 0.50) 100%);
@@ -260,6 +262,7 @@ body {
     <div class="Vector" style="width: 12.28px; height: 12.14px; left: 2.35px; top: 14.69px; position: absolute; background: #A1D65C"></div>
   </div>
 </div>
+	</section>
 </body>
 
   -->
